got index to work

--- a/js/ng-views/index.html
+++ b/js/ng-views/index.html
@@ -2,6 +2,6 @@
 
     <p>{{post.author}}</p>
     <p>{{post.body}}</p>
-    <img src="{{post.photoUrl}}">
+    <img src="{{post.photo_url}}">
 
 </div>
