--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="wdinstagram">
-    {{ 5 + 5 }}
-    <h1> WDInstagram </h1>
+    <h1><a data-ui-sref="postsIndex"> WDInstagram</a> </h1>
     <main ui-view>
-
-
-
     </main>
   </body>
 </html>
