--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular-resource.min.js"></script>
-
-
-
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <script src="js/app.js"></script>
   </head>
+  
   <body ng-app="wdinstagram">
     <h1><a data-ui-sref="postsIndex"> WDInstagram</a> </h1>
     <main ui-view>
