--- a/js/ng-views/index.html
+++ b/js/ng-views/index.html
@@ -2,6 +2,7 @@
 <a data-ui-sref="postNew">New Post</a>
 
 <div data-ng-repeat="post in vm.posts">
-  <p><a data-ui-sref="postShow({id: post.id})">{{post.author}}</a> || <a data-ui-sref="postEdit({id: post.id})">Edit</a></p>
-
+  <ul>
+    <li><p><a data-ui-sref="postShow({id: post.id})">{{post.author}}</a> || <a data-ui-sref="postEdit({id: post.id})">Edit</a></p></li>
+  </ul>
 </div>
