--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <script src="js/app.js"></script>
   </head>
-  
+
   <body ng-app="wdinstagram">
-    <h1><a data-ui-sref="postsIndex"> WDInstagram</a> </h1>
+    <h1><a data-ui-sref="postsIndex"> WDInstagram</a> | <a data-ui-sref="postNew">( + )</a></h1>
     <main ui-view>
     </main>
   </body>
